@@ -137,6 +137,138 @@ wxTextCtrlBase::HitTest( pt )
 
 %}
 
+
+#if WXPERL_W_VERSION_GE( 2, 9, 2 )
+
+%name{Wx::TextCtrlIface} class wxTextCtrlIface
+{
+
+    wxString GetValue() const;
+    void SetValue( const wxString& value );
+    void ChangeValue( const wxString& value );
+    wxString GetRange( long from, long to ) const;
+    
+    int GetLineLength( long lineNo ) const;
+    wxString GetLineText( long lineNo ) const;
+    int GetNumberOfLines() const;
+    
+    bool LoadFile( const wxString& file, int fileType = wxTEXT_TYPE_ANY );
+    bool SaveFile( const wxString& file = wxEmptyString, int fileType = wxTEXT_TYPE_ANY );
+    
+    bool IsModified() const;
+    void MarkDirty();
+    void DiscardEdits();
+    void SetModified( bool modified );
+    bool IsEmpty();    
+    
+    bool SetStyle( long start, long end, const wxTextAttr& style );
+    bool SetDefaultStyle( const wxTextAttr& style );
+    const wxTextAttr& GetDefaultStyle() const;
+    
+    long XYToPosition( long x, long y ) const;
+    void ShowPosition(long pos);    
+    
+    void WriteText( const wxString& text );
+    void AppendText( const wxString& text );    
+    
+    void Clear();
+    void Replace( long from, long to, const wxString& value );
+    void Remove( long from, long to );
+    void RemoveSelection();
+    
+    void Copy();
+    void Cut();
+    void Paste();
+    bool CanCopy() const;
+    bool CanCut() const;
+    bool CanPaste() const;
+    void Undo();
+    void Redo();
+    bool CanUndo() const;
+    bool CanRedo() const;
+    
+    void SetInsertionPoint( long pos );
+    void SetInsertionPointEnd();
+    long GetInsertionPoint() const;
+    long GetLastPosition() const;
+
+    void SetSelection( long from, long to );
+    void SelectAll();
+    bool HasSelection() const;    
+    wxString GetStringSelection() const;
+
+    bool AutoComplete( const wxArrayString& choices );
+    bool AutoCompleteFileNames();
+##	bool AutoComplete(wxTextCompleter *completer);
+	
+    bool IsEditable() const;	
+    void SetEditable( bool editable );
+    void SetMaxLength( unsigned long len );
+
+    bool SetHint(const wxString& hint);
+    wxString GetHint() const;
+
+	bool SetMargins(const wxPoint& pt);
+    wxPoint GetMargins() const;    
+
+};
+
+%{
+
+void
+wxTextCtrlIface::GetSelection()
+  PREINIT:
+    long from;
+    long to;
+  PPCODE:
+    THIS->GetSelection( &from, &to );
+    EXTEND( SP, 2 );
+    PUSHs( sv_2mortal( newSViv( from ) ) );
+    PUSHs( sv_2mortal( newSViv( to ) ) );
+
+void
+wxTextCtrlIface::PositionToXY( pos )
+    long pos
+  PREINIT:
+    long x;
+    long y;
+  PPCODE:
+    THIS->PositionToXY( pos, &x, &y );
+    EXTEND( SP, 2 );
+    PUSHs( sv_2mortal( newSViv( x ) ) );
+    PUSHs( sv_2mortal( newSViv( y ) ) );
+
+void
+wxTextCtrlIface::HitTest( pt )
+    wxPoint pt
+  PPCODE:
+    long col, row;
+    wxTextCtrlHitTestResult res = THIS->HitTest( pt, &col, &row );
+
+    EXTEND( SP, 3 );
+    PUSHs( sv_2mortal( newSViv( res ) ) );
+    PUSHs( sv_2mortal( newSViv( col ) ) );
+    PUSHs( sv_2mortal( newSViv( row ) ) );
+
+void
+wxTextCtrlIface::GetStyle( position )
+    long position
+  PPCODE:
+    wxTextAttr attr;
+    bool retval = THIS->GetStyle( position, attr );
+    EXTEND( SP, 2 );
+    PUSHs( newSViv( retval ) );
+    PUSHs( retval ? wxPli_non_object_2_sv( aTHX_ sv_newmortal(),
+                                           new wxTextAttr( attr ),
+                                           "Wx::TextAttr" ) :
+                   &PL_sv_undef );
+
+%}
+
+
+#endif 
+
+
 %name{Wx::TextCtrl} class wxTextCtrl
 {
 #if defined( __WXMAC__ ) && WXPERL_W_VERSION_GE( 2, 8, 0 )
